# xscribe

./: LICENSE  README.md  pyproject.toml  xscribe.py
.github/workflows/: publish.yml
