[project]
name = "xscribe"
version = "0.1.0"
description = "Transcribe video and audio to markdown with timestamps. Supports local files and streams."
requires-python = ">=3.10"
license = "MIT"
readme = "README.md"
keywords = ["transcription", "whisper", "video", "audio", "markdown"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "faster-whisper",
]

[project.scripts]
xscribe = "xscribe:main"

[project.urls]
Homepage = "https://github.com/edbutlerx/xscribe"
Issues = "https://github.com/edbutlerx/xscribe/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
